# pramiti-mcp-gateway

./: .gitignore  LICENSE  PUBLISHING.md  README.md  pyproject.toml
.github/workflows/: publish.yml
examples/: demo.py  demo_server.py  tools.sample.json
site/: index.html
src/pramiti_mcp_gateway/: __init__.py  classifier.py  cli.py  connect.py  posture.py  proxy.py  records.py  scan.py  signing.py  verify.py
tests/: test_classifier.py  test_connect.py  test_proxy_posture.py  test_records.py  test_scan.py
tests/fixtures/: tiny_mcp_server.py
